<resources>
    <string name="app_name">Custom Bottom Tab Bar Navigation</string>
    <string name="content_description_profile">profile</string>
    <string name="content_description_notifications">notifications</string>
    <string name="content_description_add">add</string>
    <string name="content_description_search">search</string>
    <string name="content_description_home">home</string>
    <string name="menu_profile">profile</string>
    <string name="menu_notifications">notifications</string>
    <string name="menu_add">add</string>
    <string name="menu_search">search</string>
    <string name="menu_home">home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>